--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
 
 @font-face {
-  font-family: karbon;
+  font-family: karbon-regular;
   src: url('fonts/Karbon-Regular.otf');
+}
+
+@font-face{
+  font-family: karbon-bold;
+  src: url('font/Karbon-Bold.otf');
 }
 
 body {
   background: #333;
   margin: auto;
   width: 1090px;
-  font-family: karbon;
+  font-family: karbon-regular;
+  font-size: 24px;
 }
 
+a {
+  font-family: karbon-regular
+}
 .arc-text {
   font-family: karbon
   font-size: 16px;
