--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
   background: #333;
   margin: auto;
-  width: 1090px;
+  width: 100%;
   font-family: karbon-regular;
   font-size: 24px;
 }
