--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 body {
   background: #333;
-  margin: auto;
+  margin: 100px;
   width: 100%;
   font-family: karbon-regular;
   font-size: 24px;
